Fixed overflow

--- a/frontend/src/scss/modules/_modal.scss
+++ b/frontend/src/scss/modules/_modal.scss
@@ -37,7 +37,7 @@
     position: relative;
     max-height: 80%;
     margin: 150px 0;
-    overflow: hidden;
+    overflow: auto;
     max-width: 750px;
     transition: 0.2s ease transform;
     display: block;
